# distributed-integration-qt

./: CMakeLists.txt  README.md
src/client/: client_main.cpp
src/common/: framed_socket.cpp  framed_socket.h  integrator.cpp  integrator.h  message_io.h  protocol.h
src/server/: server_main.cpp
tests/: integrator_tests.cpp
